--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aqi-lit (1.3) unstable; urgency=medium
+
+  * Spell "__init__" with both "i"s.
+
+ -- Ryan Anderson <ryan@michonline.com>  Thu, 06 Jun 2019 21:36:59 -0700
+
 aqi-lit (1.2) unstable; urgency=medium
 
   * Turn off LEDs when they aren't needed.
